# ble_remote

./: CMakeLists.txt  README.md  VERSION  private.key  public_key.c  version.h.in
apps/app/: CMakeLists.txt  aes_handler.c  aes_handler.h  ble_app_handler.c  ble_app_handler.h  ble_handler.c  ble_handler.h  button_handler.c  button_handler.h  data_handler.c  data_handler.h  factory_mode.c  factory_mode.h  fstorage_cfg.h  fstorage_handler.c  fstorage_handler.h  led_handler.c  led_handler.h  main.c  normal_mode.c  normal_mode.h  remote_cmd.c  remote_cmd.h
apps/app/ble_pwd/: ble_pwd.c  ble_pwd.h  ble_pwd_handler.c  ble_pwd_handler.h
apps/app/ble_strm/: ble_service_common.h  ble_strm.c  ble_strm.h  ble_strm_handler.c  ble_strm_handler.h
apps/app/config/: app_config.h  sdk_config.h  version.h
apps/app/linker/: nrf52810_xxAA_s112_7.0.1.ld  nrf52810_xxAA_s112_7.0.1.sct  nrf52840_xxAA_s140_7.0.1.sct
apps/app/proto/: faccfg.options  faccfg.pb.c  faccfg.pb.h  faccfg.proto  msgnode.options  msgnode.pb.c  msgnode.pb.h  msgnode.proto  设备模版.json
apps/app/user_board/: board_remote001.h  custom_board.h
apps/bootloader/: CMakeLists.txt
apps/dfu/: CMakeLists.txt  dfu_public_key.c  main.c  sdk_config.h
apps/dfu/ble_dfu/: nrf_dfu_ble.c  nrf_dfu_ble.h
apps/dfu/linker/: nrf52810_xxAA_s112_7.0.1.ld  nrf52810_xxAA_s112_7.0.1.sct
apps/dfu/sdk_bootloader_hex/: nrf52810_xxaa_s112.hex
apps/factory_test/: CMakeLists.txt  VERSION  cli.c  cli.h  main.c  radio_config.c  radio_config.h  storage.c  storage.h  storage_cfg.h  storage_handler.c  storage_handler.h
apps/factory_test/config/: sdk_config.h
apps/factory_test/linker/: nrf52810_xxAA_s112_7.0.1.ld  nrf52810_xxAA_s112_7.0.1.sct  nrf52832_xxAA_s132_7.0.1.ld  nrf52832_xxAA_s132_7.0.1.sct
apps/factory_test/proto/: faccfg.options  faccfg.pb.c  faccfg.pb.h  faccfg.proto
apps/factory_test/test_items/: battery_test.c  ble_ctx.c  ble_ping.c  ble_pong.c  cache.c  gpio_test.c  usage.c
apps/factory_test/user_board/: board_remote001.h
apps/factory_test/user_cli/: nrf_cli.c  nrf_cli.h
apps/factory_test/user_cli/uart/: nrf_cli_uart.c
cmake/: findsdk.cmake  git.cmake  nrfjprog.cmake  platform.cmake  pristine.cmake  softdevice.cmake  toolchain.cmake  version.cmake
cmake/platform/: nrf52810_xxAA.cmake  nrf52832_xxAA.cmake  nrf52833_xxAA.cmake  nrf52840_xxAA.cmake
cmake/sdk/: nRF5_SDK_16.0.0_98a08e2.cmake
cmake/softdevice/: s132_7.0.1.cmake
cmake/toolchain/: armcc.cmake  armgcc.cmake
firmware/: SENSORO_SSS_CONTROLLER_1010_FW_V1.1.0_5734ae7_202006201146.hex
lib/interface/: battery_handler.c  battery_handler.h
lib/platform/: pl_adc.c  pl_adc.h  pl_timer.c  pl_timer.h  pl_utils.c  pl_utils.h
lib/platform/nrf52/timer/: timer.h
lib/util/: test_util.c  util.c  util.h
